deployment.yaml
#
# Deployment manifest
#
---
apiVersion: v1
kind: Service
metadata:
  name: spr-hello-service # Shows up on e.g."kubectl get services"
spec:
  ports:
    - port: 8080 # Expose service port
      protocol: TCP
      targetPort: 8080 # Map to internal container port
  selector:
    app: spr-hello # Pods to include in service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spr-hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: spr-hello.bzk-koop-tst.test2.s15m.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spr-hello-service
                port:
                  number: 8080
  tls:
    - hosts:
        - spr-hello.bzk-koop-tst.test2.s15m.nl
      secretName: wildcard-tls # Predefined secret, for all ingresses in namespace, bound to internal VPN-domain s15m.nl
